[package]
name = "codemap"
version = "0.1.0-beta.1"
edition = "2021"
authors = ["Ishaq Breiwish <ishaq.breiwish@gmail.com>"]
license = "MIT"
description = "A CLI for understanding and onboarding to codebases"
repository = "https://github.com/yourusername/codemap"


[[bin]]
name = "codemap"
path = "src/main.rs"


[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
walkdir = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rprompt = "2"


